--- a/public/style.css
+++ b/public/style.css
@@ -91,7 +91,7 @@ svg {
     font-size: 1.8rem;
     line-height: 1.05;
 }
-.article aside ul {
+.article aside ul.articles {
     display: none;
 }
 .article article, .article .menu-return {
@@ -100,7 +100,7 @@ svg {
 
 .container {
     display: grid;
-    min-height: calc(100vh - 120px);
+    min-height: 100vh;
     max-height: 100vh;
     overflow: hidden;
     grid-template-rows: 6em auto 7em;
@@ -144,19 +144,19 @@ nav {
     transition: opacity 400ms;
 }
 
-ul {
+ul.articles {
     margin: 1em;
     padding: 0;
     list-style-type: none;
 }
 
-ul li {
+ul.articles li {
     font-family: 'Staatliches', sans-serif;
     font-size: 2.5rem;
     margin-bottom: 1em;
 }
 
-ul li a {
+ul.articles li a {
     text-decoration: none;
     color: var(--contrast);
     display: inline-block;
@@ -165,7 +165,7 @@ ul li a {
     transition-timing-function: cubic-bezier(0.38, 1.52, 0.69, 1.68);
 }
 
-ul li a:hover {
+ul.articles li a:hover {
     transform: scale(1.1);
 }
 
@@ -194,11 +194,12 @@ ul li a:hover {
 }
 
 .detail-text {
-    transform: rotate(90deg) translateX(calc(var(--punchSize) / 1.5));
+    transform: rotate(90deg) translateX(calc(var(--punchSize) / 1.2)) translateY(-3px);
     display: inline-block;
     transform-origin: bottom left;
     font-size: 0.8rem;
     width: 300%;
+    white-space: pre;
 }
 
 .circ {
@@ -248,6 +249,7 @@ footer {
             'foot . articles';        
         margin: 50px;
         border: 10px var(--contrast) solid;
+        min-height: calc(100vh - 120px);
         max-height: calc(100vh - 120px);
     }
 
@@ -272,7 +274,7 @@ footer {
     }
 
     .detail-text {
-        width: inherit;
+        white-space: initial;
     }
 
     .circ {
