--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,12 @@
-:root {
-    --theme: #f9c4ff;
+:root {    
+    --lightTheme: #f9c4ff;
+    --lightContrast: #333;
     --darkTheme: #333;
-    --contrast: #333;
     --darkContrast: #fff;
+
+    --theme: var(--lightTheme);
+    --contrast: var(--lightContrast);
+
     --punchSize: 2rem;
     --border-regular: 3px var(--contrast) solid;
     --border-large: 5px var(--contrast) solid;
@@ -76,6 +80,7 @@ h1 span {
 
 p {
     font-size: 1.2rem;
+    line-height: 1.5;
 }
 
 img {
@@ -194,12 +199,12 @@ ul.articles li a:hover {
 }
 
 .detail-text {
-    transform: rotate(90deg) translateX(calc(var(--punchSize) / 1.2)) translateY(-3px);
+    transform: rotate(90deg) translateX(calc(var(--punchSize) / 2.2)) translateY(-3px);
     display: inline-block;
     transform-origin: bottom left;
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     width: 300%;
-    white-space: pre;
+    white-space: nowrap;
 }
 
 .circ {
@@ -274,6 +279,7 @@ footer {
     }
 
     .detail-text {
+        transform: rotate(90deg) translateX(calc(var(--punchSize) / 1.3)) translateY(-3px);
         white-space: initial;
     }
 
